--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5,18 +5,19 @@ body {
 	font: normal normal normal 11px/normal '.HelveticaNeueDeskInterface-Regular';
 }
 
+
 #header{
 	width: 100%;
-	height: 50px;
+	height: 70px;
 	background-color: #f2f2f2;
-	border-bottom: 1px solid #eeeeee;
+	border-bottom: 1px solid #e7e7e7;
 	position: fixed;
 	top: 0;
 	z-index: 1000;
 }
 
 #items{
-	margin-top: 50px;
+	margin-top: 70px;
 }
 
 .itemsContainer {
@@ -130,14 +131,14 @@ div.item_info div#name div#desc{
 
 #gotoform{
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	right: 20px;
-	width: 60px;
-	height: 60px;
-	background-color: #005584;
+	width: 50px;
+	height: 50px;
+	background-color: #f2f2f2;
 	border-radius: 50%;
-	border: 1px solid #00354C;
-	color: #f2f2f2;
+	border: 1px solid #005584;
+	color: #005584;
 }
 
 #addItem div:after {
@@ -158,6 +159,7 @@ div.item_info div#name div#desc{
 
 #addItem #form_container input{
 	width: 100%;
+	height: 30px;
 	border-radius: 0;
 }
 
@@ -165,16 +167,13 @@ div.item_info div#name div#desc{
 	font-size: 1.1em;
 }
 
-#addItem button#add{
-	position: absolute;
+#add{
+	float: right;
+	margin-right: 10%;
 	width: 100px;
-	height: 40px;
-	border: 1px solid #1F8CB2;
+	height: 50px;
 	background-color: #29ABE2;
-	border-radius: 0;
-	margin: 0;
-	bottom: 20px;
-	right: 10%;
+	border: 1px solid #1F8CB2;
 	color: #f2f2f2;
 }
 
